--- a/cds-helper/App.xaml
+++ b/cds-helper/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="cds_helper.App"
+<prism:PrismApplication x:Class="cds_helper.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:cds_helper"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
-         
+
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
