--- a/CdsHelper.Form/Themes/Views/CdsHelperWindow.xaml
+++ b/CdsHelper.Form/Themes/Views/CdsHelperWindow.xaml
@@ -1,14 +1,10 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:CdsHelper.Form.UI.Views"
-                    xmlns:main="clr-namespace:CdsHelper.Main.UI.Views;assembly=CdsHelper.Main"
-                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+                    xmlns:main="clr-namespace:CdsHelper.Main.UI.Views;assembly=CdsHelper.Main">
 
     <Style TargetType="{x:Type views:CdsHelperWindow}">
-        <Setter Property="Background" Value="{DynamicResource MaterialDesign.Brush.Background}" />
-        <Setter Property="TextElement.Foreground" Value="{DynamicResource MaterialDesign.Brush.Foreground}" />
-        <Setter Property="TextElement.FontWeight" Value="Regular" />
-        <Setter Property="TextElement.FontSize" Value="13" />
+        <Setter Property="Background" Value="Azure" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type views:CdsHelperWindow}">
