좌표 수정 하는 기능 추가

--- a/CdsHelper.Form/Themes/Generic.xaml
+++ b/CdsHelper.Form/Themes/Generic.xaml
@@ -3,5 +3,6 @@
     
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/CdsHelper.Form;component/Themes/Views/CdsHelperWindow.xaml"/>
+        <ResourceDictionary Source="/CdsHelper.Form;component/Themes/Views/EditCityPixelDialog.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
