--- a/CdsHelper.Main/Themes/Views/CharacterContent.xaml
+++ b/CdsHelper.Main/Themes/Views/CharacterContent.xaml
@@ -24,10 +24,12 @@
                             <CheckBox Content="특기 필터:" VerticalAlignment="Center" Margin="10,0,5,0"
                                       IsChecked="{Binding FilterBySkill}" />
                             <ComboBox Width="120" Height="25" VerticalAlignment="Center" Margin="0,0,5,0"
+                                      ItemsSource="{Binding SkillNames}"
                                       SelectedIndex="{Binding SelectedSkillIndex}" />
                             <TextBlock Text="Lv:" VerticalAlignment="Center" Margin="5,0,5,0" />
                             <ComboBox Width="50" Height="25" VerticalAlignment="Center" Margin="0,0,10,0"
-                                      SelectedIndex="{Binding SelectedSkillLevel}" />
+                                      ItemsSource="{Binding SkillLevels}"
+                                      SelectedItem="{Binding SelectedSkillLevel}" />
                             <TextBlock VerticalAlignment="Center" Text="{Binding FilePath}" />
                         </StackPanel>
 
