--- a/CdsHelper.Main/Themes/Views/CityContent.xaml
+++ b/CdsHelper.Main/Themes/Views/CityContent.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views">
+                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views"
+                    xmlns:units="clr-namespace:CdsHelper.Support.UI.Units;assembly=CdsHelper.Support">
 
     <Style TargetType="{x:Type views:CityContent}">
         <Setter Property="Template">
@@ -32,9 +33,8 @@
                             <Button Content="필터 초기화" Width="100" Height="30" Margin="10,0,0,0"
                                     Command="{Binding ResetCityFilterCommand}" />
 
-                            <Button Content="데이터 내보내기" Width="100" Height="30" Margin="10,0,0,0"
-                                    Command="{Binding ExportCitiesToJsonCommand}"
-                                    BorderBrush="DodgerBlue" BorderThickness="2" />
+                            <units:ExportButton Content="데이터 내보내기"
+                                    Command="{Binding ExportCitiesToJsonCommand}" />
                         </WrapPanel>
 
                         <!-- 도시 데이터 그리드 -->
