--- a/CdsHelper.Main/Themes/Views/CharacterContent.xaml
+++ b/CdsHelper.Main/Themes/Views/CharacterContent.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views">
+                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views"
+                    xmlns:units="clr-namespace:CdsHelper.Support.UI.Units;assembly=CdsHelper.Support">
 
     <Style TargetType="{x:Type views:CharacterContent}">
         <Setter Property="Template">
@@ -34,22 +35,32 @@
                         </StackPanel>
 
                         <!-- 데이터 그리드 -->
-                        <DataGrid Grid.Row="1"
+                        <units:CdsDataGrid Grid.Row="1"
                                   ItemsSource="{Binding Characters}"
-                                  AutoGenerateColumns="False"
-                                  IsReadOnly="True"
-                                  Margin="10"
-                                  AlternatingRowBackground="LightGray">
-                            <DataGrid.RowStyle>
-                                <Style TargetType="DataGridRow">
+                                  Margin="10">
+                            <units:CdsDataGrid.RowStyle>
+                                <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
+                                    <Setter Property="Background" Value="White"/>
+                                    <Setter Property="Cursor" Value="Hand"/>
                                     <Style.Triggers>
                                         <DataTrigger Binding="{Binding IsGray}" Value="True">
                                             <Setter Property="Foreground" Value="#888888" />
                                         </DataTrigger>
+                                        <MultiTrigger>
+                                            <MultiTrigger.Conditions>
+                                                <Condition Property="IsMouseOver" Value="True"/>
+                                                <Condition Property="IsSelected" Value="False"/>
+                                            </MultiTrigger.Conditions>
+                                            <Setter Property="Background" Value="#E8F4FC"/>
+                                        </MultiTrigger>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter Property="Background" Value="#104F89"/>
+                                            <Setter Property="Foreground" Value="White"/>
+                                        </Trigger>
                                     </Style.Triggers>
                                 </Style>
-                            </DataGrid.RowStyle>
-                            <DataGrid.Columns>
+                            </units:CdsDataGrid.RowStyle>
+                            <units:CdsDataGrid.Columns>
                                 <DataGridTextColumn Header="이름" Binding="{Binding Name}" Width="150" />
                                 <DataGridTextColumn Header="체력" Binding="{Binding HP}" Width="50" />
                                 <DataGridTextColumn Header="지력" Binding="{Binding Intelligence}" Width="50" />
@@ -61,8 +72,8 @@
                                 <DataGridTextColumn Header="소재" Binding="{Binding Location}" Width="100" />
                                 <DataGridTextColumn Header="연령" Binding="{Binding Age}" Width="50" />
                                 <DataGridTextColumn Header="얼굴" Binding="{Binding Face}" Width="50" />
-                            </DataGrid.Columns>
-                        </DataGrid>
+                            </units:CdsDataGrid.Columns>
+                        </units:CdsDataGrid>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
