--- a/CdsHelper.Main/Themes/Views/BookContent.xaml
+++ b/CdsHelper.Main/Themes/Views/BookContent.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views">
+                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views"
+                    xmlns:units="clr-namespace:CdsHelper.Support.UI.Units;assembly=CdsHelper.Support">
 
     <Style TargetType="{x:Type views:BookContent}">
         <Setter Property="Template">
@@ -44,22 +45,19 @@
                         </WrapPanel>
 
                         <!-- 도서 데이터 그리드 -->
-                        <DataGrid Grid.Row="1"
+                        <units:CdsDataGrid Grid.Row="1"
                                   ItemsSource="{Binding Books}"
                                   SelectedItem="{Binding SelectedBook}"
-                                  AutoGenerateColumns="False"
-                                  IsReadOnly="True"
-                                  Margin="10"
-                                  AlternatingRowBackground="LightGray">
-                            <DataGrid.Columns>
+                                  Margin="10">
+                            <units:CdsDataGrid.Columns>
                                 <DataGridTextColumn Header="도서명" Binding="{Binding Name}" Width="200" />
                                 <DataGridTextColumn Header="언어" Binding="{Binding Language}" Width="150" />
                                 <DataGridTextColumn Header="소재 도서관" Binding="{Binding Library}" Width="*" MinWidth="200" />
                                 <DataGridTextColumn Header="게제 힌트" Binding="{Binding Hint}" Width="200" />
                                 <DataGridTextColumn Header="필요" Binding="{Binding Required}" Width="100" />
                                 <DataGridTextColumn Header="개제조건" Binding="{Binding Condition}" Width="200" />
-                            </DataGrid.Columns>
-                        </DataGrid>
+                            </units:CdsDataGrid.Columns>
+                        </units:CdsDataGrid>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
