--- a/CdsHelper.Main/Themes/Views/FigureheadContent.xaml
+++ b/CdsHelper.Main/Themes/Views/FigureheadContent.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views">
+                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views"
+                    xmlns:units="clr-namespace:CdsHelper.Support.UI.Units;assembly=CdsHelper.Support">
 
     <Style TargetType="{x:Type views:FigureheadContent}">
         <Setter Property="Template">
@@ -33,19 +34,16 @@
                         </WrapPanel>
 
                         <!-- 선수상 데이터 그리드 -->
-                        <DataGrid Grid.Row="1"
+                        <units:CdsDataGrid Grid.Row="1"
                                   ItemsSource="{Binding Figureheads}"
-                                  AutoGenerateColumns="False"
-                                  IsReadOnly="True"
-                                  Margin="10"
-                                  AlternatingRowBackground="LightGray">
-                            <DataGrid.Columns>
+                                  Margin="10">
+                            <units:CdsDataGrid.Columns>
                                 <DataGridTextColumn Header="선수상" Binding="{Binding Name}" Width="120" />
                                 <DataGridTextColumn Header="기능" Binding="{Binding Function}" Width="60" />
                                 <DataGridTextColumn Header="레벨" Binding="{Binding Level}" Width="60" />
                                 <DataGridTextColumn Header="비고" Binding="{Binding Note}" Width="*" />
-                            </DataGrid.Columns>
-                        </DataGrid>
+                            </units:CdsDataGrid.Columns>
+                        </units:CdsDataGrid>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
