--- a/CdsHelper.Main/Themes/Views/ItemContent.xaml
+++ b/CdsHelper.Main/Themes/Views/ItemContent.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views">
+                    xmlns:views="clr-namespace:CdsHelper.Main.UI.Views"
+                    xmlns:units="clr-namespace:CdsHelper.Support.UI.Units;assembly=CdsHelper.Support">
 
     <Style TargetType="{x:Type views:ItemContent}">
         <Setter Property="Template">
@@ -32,13 +33,10 @@
                         </WrapPanel>
 
                         <!-- 아이템 데이터 그리드 -->
-                        <DataGrid Grid.Row="1"
+                        <units:CdsDataGrid Grid.Row="1"
                                   ItemsSource="{Binding Items}"
-                                  AutoGenerateColumns="False"
-                                  IsReadOnly="True"
-                                  Margin="10"
-                                  AlternatingRowBackground="LightGray">
-                            <DataGrid.Columns>
+                                  Margin="10">
+                            <units:CdsDataGrid.Columns>
                                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50" />
                                 <DataGridTextColumn Header="아이템명" Binding="{Binding Name}" Width="150" />
                                 <DataGridTextColumn Header="분류" Binding="{Binding Category}" Width="80" />
@@ -47,8 +45,8 @@
                                 <DataGridTextColumn Header="구매가" Binding="{Binding BuyPrice, StringFormat=N0}" Width="80" />
                                 <DataGridTextColumn Header="힌트" Binding="{Binding Hint}" Width="150" />
                                 <DataGridTextColumn Header="관련발견물" Binding="{Binding RelatedDiscovery}" Width="*" />
-                            </DataGrid.Columns>
-                        </DataGrid>
+                            </units:CdsDataGrid.Columns>
+                        </units:CdsDataGrid>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
