--- a/CdsHelper.Support/Themes/Generic.xaml
+++ b/CdsHelper.Support/Themes/Generic.xaml
@@ -6,5 +6,6 @@
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/AreaMarker.xaml"/>
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Views/LibraryBooksDialog.xaml"/>
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/ExportButton.xaml"/>
+        <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/CdsDataGrid.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
