도시 저장 기능

--- a/CdsHelper.Support/Themes/Generic.xaml
+++ b/CdsHelper.Support/Themes/Generic.xaml
@@ -5,6 +5,7 @@
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/CityMarker.xaml"/>
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/AreaMarker.xaml"/>
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Views/LibraryBooksDialog.xaml"/>
+        <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Views/EditCityPixelDialog.xaml"/>
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/ExportButton.xaml"/>
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/CdsDataGrid.xaml"/>
         <ResourceDictionary Source="/CdsHelper.Support;component/Themes/UI/Units/CdsWindow.xaml"/>
