--- a/CdsHelper.Support/Themes/UI/Views/EditCityPixelDialog.xaml
+++ b/CdsHelper.Support/Themes/UI/Views/EditCityPixelDialog.xaml
@@ -1,6 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CdsHelper.Form.UI.Views">
+                    xmlns:views="clr-namespace:CdsHelper.Support.UI.Views">
 
     <Style TargetType="{x:Type views:EditCityPixelDialog}">
         <Setter Property="Background" Value="Azure"/>
